@@ -41,7 +41,10 @@ class EllipsisChecker(BaseChecker):
         """
         if (
             node.pytype() == "builtins.Ellipsis"
-            and not isinstance(node.parent, (nodes.Assign, nodes.AnnAssign, nodes.Call))
+            and not isinstance(
+                node.parent,
+                (nodes.Assign, nodes.AnnAssign, nodes.Call, nodes.Arguments),
+            )
             and (
                 len(node.parent.parent.child_sequence(node.parent)) > 1
                 or (
